--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test_task_1",
   "version": "0.1.0",
+  "homepage": "https://volin13.github.io/testAssignment-abz-agency/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
