--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_task_1",
+  "name": "testassignment-abz-agency",
   "version": "0.1.0",
   "homepage": "https://volin13.github.io/testAssignment-abz-agency/",
   "private": true,
